--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.b-red {
+  @apply border border-red-600;
+}
+
+.b-purple {
+  @apply border border-purple-600;
+}
